Update word from public
