# app/concepts/api/v1/word/contract/update.rb
@@ -1,0 +1,24 @@
+module API
+  module V1
+    # word contract
+    class Word::Contract::Update < Reform::Form
+      property :id
+      property :reference
+
+      validates :reference, presence: true
+
+      collection :synonyms, populator: :populate_synonyms do
+        property :id
+        property :reference
+
+        validates :reference, presence: true
+      end
+
+      def populate_synonyms(fragment:, **)
+        item = synonyms.find { |synonym| synonym.id == fragment['id'].to_i }
+
+        item ? item : synonyms.append(::Synonym.new)
+      end
+    end
+  end
+end
